@@ -1,3 +1,7 @@
+17 June 2024: Wouter
+	- Fix #1091: Build fails with OpenSSL >= 3.0 built with
+	  OPENSSL_NO_DEPRECATED.
+
 7 June 2024: Wouter
 	- Add unit test for validation of repeated use of a DNAME record.
 
